--- a/lib/style.css
+++ b/lib/style.css
@@ -15,6 +15,7 @@ body {
   position: relative;
   margin: 55px auto auto auto;
   width: 900px;
+  height: 700px;
   background: url(https://i.imgur.com/P8W5HhT.png);
 }
 
@@ -48,6 +49,18 @@ body {
 }
 #start-btn:hover {
   color: rgba(247, 255, 0, 1);
+  border: 1px solid rgba(247, 255, 0, 1);
+}
+#new-game-btn {
+  font-size: 36px;
+  position: absolute;
+  top: 200px;
+  right: 310px;
+  height: 50px;
+  width: 250px;
+}
+#new-game-btn:hover {
+  color: #7FFA50;
   border: 1px solid rgba(247, 255, 0, 1);
 }
 .no-btn {
